--- a/styles/style.css
+++ b/styles/style.css
@@ -28,6 +28,16 @@ img {
   height: auto;
 }
 
+#preloader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: 999999;
+}
+
 /* Buttons */
 .read-more {
   padding: 6px 10px;
@@ -69,6 +79,7 @@ img {
   background-repeat: no-repeat;
   padding: 1.5rem 0;
   color: #fff;
+  overflow: hidden;
 }
 #hero-slider h1 {
   font-weight: bold;
