--- a/styles/style.css
+++ b/styles/style.css
@@ -209,3 +209,29 @@ img {
   font-style: italic;
   font-weight: bold;
 }
+
+/* Footer */
+#site-footer .footer-top {
+  background-color: #151746;
+  padding: 20px 25px;
+}
+#site-footer .footer-top .social-links li a {
+  padding: 10px;
+  margin: 0 5px;
+}
+#site-footer .footer-top .terms-policy li a {
+  padding: 0.1rem 1rem;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+#site-footer .footer-top .terms-policy li:not(:last-child) a {
+  border-right: 1px solid #0056b3;
+}
+#site-footer .footer-bottom {
+  background-color: #2b2f8c;
+  padding: 15px 0;
+}
+#site-footer .footer-bottom p {
+  color: #00adef;
+  font-size: 13px;
+}
