--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,7 @@ body {
   font-family: "Roboto Condensed", sans-serif;
   overflow-x: hidden;
 }
+
 p {
   font-family: "Roboto Condensed", sans-serif;
   margin: 0;
@@ -235,6 +236,46 @@ img {
 #site-footer .footer-bottom p {
   color: #00adef;
   font-size: 13px;
+}
+
+/* Blog Details Page */
+#hero-area {
+  background-image: url("../images/bg.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  padding: 3.5rem 6rem;
+  color: #fff;
+  overflow: hidden;
+}
+#hero-area h1 {
+  font-size: 43px;
+  font-weight: bold;
+}
+.blog-details-area {
+  padding: 4.5rem 2rem 4rem 3.6rem;
+  color: #666666;
+}
+.blog-details-area p,
+.blog-details-area h3,
+.blog-details-area h2,
+.blog-details-area h4 {
+  color: #666666;
+  font-family: "Merriweather Sans", sans-serif;
+}
+.blog-details-area h2 {
+  font-size: 32px;
+  line-height: 38px;
+  font-weight: bold;
+  margin-bottom: 0.8rem;
+}
+.blog-details-area h3 {
+  margin-bottom: 0.5rem;
+}
+.blog-details-area p {
+  font-size: 18px;
+  line-height: 22px;
+  margin-bottom: 1rem;
 }
 
 /* Responsive */
