--- a/styles/style.css
+++ b/styles/style.css
@@ -253,7 +253,7 @@ img {
   font-weight: bold;
 }
 .blog-details-area {
-  padding: 4.5rem 2rem 2rem 3.6rem;
+  padding: 4.5rem 2rem 0 3.6rem;
   color: #666666;
   border-bottom: 1px solid #ddd;
   margin-bottom: 4rem;
